Increase desktop logo size, optimize mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --bg-color: #F8FAFC;
     /* Slate 50 */
     --white: #FFFFFF;
-    --nav-height: 90px;
+    --nav-height: 100px;
     --transition: all 0.3s ease;
 }
 
@@ -569,6 +569,15 @@ footer {
         height: auto;
         padding: 150px 0 80px;
     }
+
+    /* Mobile Nav Adjustments */
+    :root {
+        --nav-height: 80px;
+    }
+
+    .logo-img {
+        height: 60px;
+    }
 }
 
 .analytics-img {
@@ -590,13 +599,13 @@ footer {
 }
 
 .logo-img {
-    height: 70px;
+    height: 90px;
     width: auto;
     object-fit: contain;
 }
 
 .logo-img-footer {
-    height: 80px;
+    height: 100px;
     width: auto;
     object-fit: contain;
     background: white;
