--- a/style.css
+++ b/style.css
@@ -600,13 +600,11 @@ footer {
 
 .logo-img {
     height: 70px;
-    /* Fit within the 90px nav */
     width: auto;
     object-fit: contain;
-    transform: scale(1.5);
-    /* Visually enlarge without changing layout */
+    transform: scale(2.2);
     transform-origin: left center;
-    /* clear anchor */
+    margin-left: 15px;
 }
 
 .logo-img-footer {
