--- a/style.css
+++ b/style.css
@@ -660,6 +660,8 @@ ul {
     background: white;
     padding: 2px;
     border-radius: 4px;
+    transform: scale(1.5);
+    margin-left: 10px;
 }
 
 .logo-img-footer {
