--- a/style.css
+++ b/style.css
@@ -140,12 +140,13 @@ ul {
 }
 
 .logo-img {
-    height: 85px;
-    /* Max safe size for 90px nav */
+    height: 80px;
+    /* Standard size for cropped logo */
     width: auto;
     object-fit: contain;
     mix-blend-mode: multiply;
-    margin-left: 20px;
+    margin-left: 0;
+    /* Removed margin as crop might be tight */
 }
 
 .nav-links {
